--- a/notes.html
+++ b/notes.html
@@ -28,7 +28,7 @@
 	<textarea name='comment' rows=10 cols=100/><br>
 </form>
 <p style='font-style:italic'>Changes saved automatically</p>
-<a onclick='back();return false;' href=''>Back to Pump Conditions</a>
+<a onclick='back();return false;' href=''>Back</a>
 <script>
 	setCtls(Cond);
 	nmAll().change(function(){
