--- a/grid.html
+++ b/grid.html
@@ -392,7 +392,22 @@
 			}          
 			vdTol('motor_rated_flc',col,flc(a),.5);
 			vdTol('motor_field_voltage',col,nm('motor_rated_voltage',col).val(),.1);
-			const eFlow = nm('flow',col);
+			const 
+				eFlow = nm('flow',col),
+				minMax = [
+					[100, 20000],//End suction slurry
+					[100, 52500],//End suction sewage  
+					[400, 2200],//End suction stock  
+					[100, 52500],// End suction submersible sewage 
+					[400, 22000],//API double suction  
+					[100, 4000],//Multistage boiler feed 
+					[100, 5000],//End suction ANSI/API  
+					[200, 40000],//Axial flow 
+					[200, 100000],//Double suction  
+					[200, 40000],//Vertical turbine  
+					[5000, 100000],//Large end suction//
+				];
+
 			hl(eFlow,eFlow.val()<2000 || eFlow.val()>2500);
 		});
 		showHdResults(true);
