--- a/main.html
+++ b/main.html
@@ -87,24 +87,32 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 		Dlg.showSaveDialog(DlgFilter,
 			function (fn) {
 				if (fn) {					
-					let hd, lines;
-					Conds.forEach(function(c,i) {
-						const r = crunch(cvtArg(c));						
-						if (i==0) {
-							hd = Object.keys(Conds[0]).sort().concat(Object.keys(r).sort());
-							lines=[JSON.stringify([0,DefCond,Units,HeadTool,Curve,MotorPerf]),hd.join('\t')];
-						}
-						let o = $.extend({},r,c);
-						lines.push(
-							hd.map((nm,i)=> {
-								return JSON.stringify(o[nm]);
-							}).join('\t')
-						);
-					});		
-					require('fs').writeFile(fn,lines.join('\n'));				
+					require('fs').writeFile(fn,JSON.stringify([0,DefCond,Units,HeadTool,Curve,MotorPerf,Conds]);				
 				}
 		}); 
 	}
+	// function xprt() {		
+	// 	Dlg.showSaveDialog(DlgFilter,
+	// 		function (fn) {
+	// 			if (fn) {					
+	// 				let hd, lines;
+	// 				Conds.forEach(function(c,i) {
+	// 					const r = crunch(cvtArg(c));						
+	// 					if (i==0) {
+	// 						hd = Object.keys(Conds[0]).sort().concat(Object.keys(r).sort());
+	// 						lines=[JSON.stringify([0,DefCond,Units,HeadTool,Curve,MotorPerf]),hd.join('\t')];
+	// 					}
+	// 					let o = $.extend({},r,c);
+	// 					lines.push(
+	// 						hd.map((nm,i)=> {
+	// 							return JSON.stringify(o[nm]);
+	// 						}).join('\t')
+	// 					);
+	// 				});		
+	// 				require('fs').writeFile(fn,lines.join('\n'));				
+	// 			}
+	// 	}); 
+	// }
 
 	DlgFilter={filters: [{ name: 'Tab Separated Values', extensions: ['tsv'] }]};
 	
