--- a/main.html
+++ b/main.html
@@ -87,7 +87,7 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 		Dlg.showSaveDialog(DlgFilter,
 			function (fn) {
 				if (fn) {					
-					require('fs').writeFile(fn,JSON.stringify([0,DefCond,Units,HeadTool,Curve,MotorPerf,Conds]);				
+					require('fs').writeFile(fn,JSON.stringify([0,DefCond,Units,HeadTool,Curve,MotorPerf,Conds]));				
 				}
 		}); 
 	}
