--- a/main.html
+++ b/main.html
@@ -125,6 +125,6 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 	// 	}); 
 	// }
 
-	DlgFilter={filters: [{ name: 'Tab Separated Values', extensions: ['tsv'] }]};
+	DlgFilter={filters: [{ name: 'PSAT Data File', extensions: ['json'] }]};
 	
 </script>
