--- a/grid.html
+++ b/grid.html
@@ -423,6 +423,9 @@
 		sum = 0;
 		$('#sum').next().next().children(':gt(1)').each((i,e) => {sum += $(e).data('r')});
 		$('#sum').next().next().append($('<td>').append(rnd(sum).toLocaleString()));
+		sum = 0;
+		$('#sum').next().next().next().children(':gt(1)').each((i,e) => {sum += $(e).data('r')});
+		$('#sum').next().next().next().append($('<td>').append(rnd(sum).toLocaleString()));
 		
 		showHdResults(true);
 	}
