--- a/main.html
+++ b/main.html
@@ -41,6 +41,7 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 </table>
 <strong>Calculators</strong>
 <ul>    
+	<a onclick='lnk(event,"unit_cvt")' href=''>Unit Converter</a><br>	
 	<a onclick='lnk(event,"pump_eff")' href=''>Pump Efficiency</a><br>
 	<a onclick='lnk(event,"motor_perf")' href=''>Motor Performance</a><br>
 	<a onclick='lnk(event,"specific_speed")' href=''>Specific Speed</a><br>
