--- a/unit_cvt.html
+++ b/unit_cvt.html
@@ -2,8 +2,60 @@
    input:not([type]) {
       width: 4rem;
    }
+   th {
+      text-align: left;
+   }
+   .out {
+      background-color: #C3C8C8;
+   }
+   #container tr:first-child  {
+      /*font-weight: bold;*/
+   }
 </style>
 <h1>Unit Converter</h1>
+<table>
+   <tr>
+      <th></th><th>FROM</th><th></th><th>TO</th><th></th>
+   </tr>
+   <tr>
+      <th>Flow</th>
+      <td><input></td>
+      <td>
+         <span><input name='' type=radio value=0>gpm</span>
+         <span><input name='' type=radio value=1>MGD</span>
+         <span><input name='' type=radio value=2>m^3/hr</span>
+         <span><input name='' type=radio value=2>L/s</span>
+      </td>
+      <td class=out></td>
+      <td>
+         <span><input name='' type=radio value=0>gpm</span>
+         <span><input name='' type=radio value=1>MGD</span>
+         <span><input name='' type=radio value=2>m^3/hr</span>
+         <span><input name='' type=radio value=2>L/s</span>         
+      </td>
+   </tr>
+   <tr>
+      <th>Power</th>
+      <td><input></td>
+      <td>
+         <span><input name='' type=radio value=0>hp</span>
+         <span><input name='' type=radio value=1>kW</span>
+      </td>
+      <td class=out></td>
+      <td>kW</td>
+   </tr>
+   <tr>
+      <th>Distance</th>
+      <td><input></td>
+      <td>
+         <span><input name='' type=radio value=0>ft</span>
+         <span><input name='' type=radio value=1>m</span>
+      </td>
+      <td class=out></td>
+      <td>m</td>
+   </tr>
+</table>
+<hr>
 <h2>Flow</h2>
 <input>
 <span><input name='' type=radio value=0>gpm</span>
