--- a/units.html
+++ b/units.html
@@ -12,7 +12,7 @@
 		color: #5d9300;
 		padding-right: 1rem;
 	}
-	#units td:last-child, #units th:last-child {
+	#zunits td:nth-child(4), #zunits th:nth-child(4) {
 		display: none;
 	}
 	#units th:nth-child(n+2),#units td:nth-child(n+2) {
@@ -36,6 +36,7 @@
 				<th>Imperial</th>
 				<th>Metric</th>
 				<th>Custom</th>
+				<th>Example</th>
 			</tr>
 			<tr>
 				<td>Flow</td>
@@ -49,6 +50,7 @@
 						<option>L/s</option>
 					</select>
 				</td>
+				<td><input></td>
 			</tr>
 			<tr>
 				<td>Power</td>
@@ -60,6 +62,7 @@
 						<option>kW</option>				
 					</select>
 				</td>
+				<td><input></td>
 			</tr>
 			<tr>
 				<td>Distance</td>
@@ -71,6 +74,7 @@
 						<option>m</option>
 					</select>
 				</td>
+				<td><input></td>
 			</tr>
 			<tr>
 				<td>Pressure</td>
@@ -82,6 +86,7 @@
 						<option>kPa</option>
 					</select>
 				</td>
+				<td><input></td>
 			</tr>
 		</table>
 	</div>
@@ -115,7 +120,7 @@
 		lastCol.show();		
 	}	
 	function start() {
-		const lastCol = $('#units th:last-child,#units td:last-child');
+		const lastCol = $('#units th:nth-child(4),#units td:nth-child(4)');
 		const met = ['m^3/hr','kW','m','kPa'];
 		let i;
 		switch (Units.toString()) {
