--- a/units.html
+++ b/units.html
@@ -22,6 +22,9 @@
 	#units table {
 		border-collapse: collapse;
 	}
+	th {
+		text-align: left;
+	}
 </style>
 <div style='display: inline-block'>
 	<h1>Units</h1>
