--- a/units.html
+++ b/units.html
@@ -53,7 +53,7 @@
 						<option>L/s</option>
 					</select>
 				</td>
-				<td><input></td>
+				<td><input name=0></td>
 			</tr>
 			<tr>
 				<td>Power</td>
@@ -65,7 +65,7 @@
 						<option>kW</option>				
 					</select>
 				</td>
-				<td><input></td>
+				<td><input name=1></td>
 			</tr>
 			<tr>
 				<td>Distance</td>
@@ -77,7 +77,7 @@
 						<option>m</option>
 					</select>
 				</td>
-				<td><input></td>
+				<td><input name=2></td>
 			</tr>
 			<tr>
 				<td>Pressure</td>
@@ -89,7 +89,7 @@
 						<option>kPa</option>
 					</select>
 				</td>
-				<td><input></td>
+				<td><input name=3></td>
 			</tr>
 		</table>
 	</div>
@@ -110,21 +110,11 @@
 		chg(DIST, Curve, [1,3]);
 		chg(POWER,MotorPerf,'motor_rated_power');
 		
-		$('table input').eq(0).val(rnd(cvt(UnitExample[0],FLOW,nunits[FLOW._num])));
-		$('table input').eq(1).val(rnd(cvt(UnitExample[1],POWER,nunits[POWER._num])));
-		$('table input').eq(2).val(rnd(cvt(UnitExample[2],DIST,nunits[DIST._num])));
-		$('table input').eq(3).val(rnd(cvt(UnitExample[3],PRESSURE,nunits[PRESSURE._num])));
-		
-		UnitExample = [
-			cvt(UnitExample[0],FLOW,nunits[FLOW._num]),
-			cvt(UnitExample[1],POWER,nunits[POWER._num]),
-			cvt(UnitExample[2],DIST,nunits[DIST._num]),
-			cvt(UnitExample[3],PRESSURE,nunits[PRESSURE._num])
-		]
-		$('table input').eq(0).val(rnd(UnitExample[0]));
-		$('table input').eq(1).val(rnd(UnitExample[1]));
-		$('table input').eq(2).val(rnd(UnitExample[2]));
-		$('table input').eq(3).val(rnd(UnitExample[3]));
+		chg(FLOW,UnitExample,0);
+		chg(POWER,UnitExample,1);
+		chg(DIST,UnitExample,2);
+		chg(PRESSURE,UnitExample,3);
+		setCtls(UnitExample);
 		
 		Units = nunits;
 		save();
@@ -184,12 +174,9 @@
 			cvt(100,DIST,unit(DIST),'ft'),
 			cvt(5,PRESSURE,unit(PRESSURE),'psig')
 		]
-		$('table input').eq(0).val(rnd(UnitExample[0]));
-		$('table input').eq(1).val(rnd(UnitExample[1]));
-		$('table input').eq(2).val(rnd(UnitExample[2]));
-		$('table input').eq(3).val(rnd(UnitExample[3]));
+		setCtls(UnitExample);
 		$('table input').change(ev => {
-			UnitExample[$('table input').index(ev.target)] = $(ev.target).val();			
+			UnitExample[$(ev.target).attr('name')] = $(ev.target).val();			
 		});
 	}
 	start();
