--- a/specific_speed.html
+++ b/specific_speed.html
@@ -48,12 +48,21 @@
 
 <script>//# sourceURL=*pump_eff
 	function plot() {
+		Cnv.width+=0;
+
+
+		let lblTxt = 'U.S.', 
+			m = 1, 
+			d = setData({});
+		if (unit(DIST) == 'm') {
+			lblTxt = 'metric';
+			m = 3472 / 4033;
+		} 
 		const ss = nm('pump_rated_speed').val() * Math.sqrt(nm('flow').val()) / Math.pow(nm('head').val(),.75);
 		$('#ss').text(rnd(ss).toLocaleString());
 		$('#ec').text(rnd(Bridge.achievableEfficiency(setData({
-			specific_speed: ss,
+			specific_speed: ss * m,
 		}))));
-		Cnv.width+=0;
 
 		P = {
 			cnv: Cnv,
@@ -66,13 +75,6 @@
 			cntY: 6
 		};
 
-		let lblTxt = 'U.S.', 
-			m = 1, 
-			d = setData({});
-		if (unit(DIST) == 'm') {
-			lblTxt = 'metric';
-			m = 3472 / 4033;
-		} 
 		setupPlot(`Specific Speed (${lblTxt})`,'Efficiency Correction (%)');
 
 		curve(x => 
@@ -83,7 +85,7 @@
 		P.ctx.beginPath();
 		P.ctx.fillStyle = '#1F82BB';
 		P.ctx.arc(xPos(Math.log10(ss/100)), yPos(Bridge.achievableEfficiency(setData({
-			specific_speed: ss,
+			specific_speed: ss*m,
 		}))),6,0,2*Math.PI,false);
 		P.ctx.fill();
 	}	 
