--- a/specific_speed.html
+++ b/specific_speed.html
@@ -49,8 +49,6 @@
 <script>//# sourceURL=*pump_eff
 	function plot() {
 		Cnv.width+=0;
-
-
 		let lblTxt = 'U.S.', 
 			m = 1, 
 			d = setData({});
@@ -58,11 +56,12 @@
 			lblTxt = 'metric';
 			m = 3472 / 4033;
 		} 
-		const ss = nm('pump_rated_speed').val() * Math.sqrt(nm('flow').val()) / Math.pow(nm('head').val(),.75);
+		const ss = nm('pump_rated_speed').val() * Math.sqrt(nm('flow').val()) / Math.pow(nm('head').val(),.75),
+			ec = Bridge.achievableEfficiency(setData({
+				specific_speed: ss * m,
+			}));
 		$('#ss').text(rnd(ss).toLocaleString());
-		$('#ec').text(rnd(Bridge.achievableEfficiency(setData({
-			specific_speed: ss * m,
-		}))));
+		$('#ec').text(rnd(ec));
 
 		P = {
 			cnv: Cnv,
@@ -74,9 +73,7 @@
 			stepY: 1,
 			cntY: 6
 		};
-
 		setupPlot(`Specific Speed (${lblTxt})`,'Efficiency Correction (%)');
-
 		curve(x => 
 			Bridge.achievableEfficiency($.extend({
 				specific_speed: x * m,
@@ -84,13 +81,12 @@
 		
 		P.ctx.beginPath();
 		P.ctx.fillStyle = '#1F82BB';
-		P.ctx.arc(xPos(Math.log10(ss/100)), yPos(Bridge.achievableEfficiency(setData({
-			specific_speed: ss*m,
-		}))),6,0,2*Math.PI,false);
+		P.ctx.arc(xPos(Math.log10(ss/100)), yPos(ec),6,0,2*Math.PI,false);
 		P.ctx.fill();
 	}	 
+
 	Cnv = dom('canvas');
-	
+
 	setPumpStyle();
 
 	nmAll().change(()=>{
