--- a/grid.html
+++ b/grid.html
@@ -110,7 +110,7 @@
 			<div>Rated Power</div>
 		</td>
 		<td>
-			<input name='motor_rated_power' data-vd-gt>
+			<input name='motor_rated_power' data-vd-gt> <button onclick="selMRP(this)"><i class="fa fa-caret-square-o-down"/></button>
 		</td>
 	</tr>
 	<tr>
@@ -317,7 +317,25 @@
 			$(e).next().hide();
 		}
 	}
+	function selMRP(e) {
+		const v = [
+			20,25,30,40,50,60,75,100,125,150,200,250,300,350,400,450,500,600,700,800,900,1000,1250,1750,
+			2000,2250,2500,3000,3500,4000,4500,5000,5500,6000,7000,8000,9000,10000,11000,12000,13000,14000,
+			15000,16000,17000,18000,19000,20000,22500,25000,27500,30000,35000,40000,45000,50000
+		];
+		const ctl = $('<select size=5>').change(e => {
+			$(e.target).prev().prev().val($(e.target).val());
+			$(e.target).prev().show();
+			$(e.target).remove();
 
+		});
+
+		$.each(v,(i,e) => {
+			ctl.append($('<option>').append(e))
+		})
+		$(e).after(ctl);
+		$(e).hide();
+	}
 	function showIO(e) {
 		const dlg = $('#io');
 		chk(dlg.find('input').first(),true);
