--- a/grid.html
+++ b/grid.html
@@ -436,15 +436,20 @@
 					$(e).data('r',r[key][0]);
 					if (key=='Motor Shaft Power' && v0>nm('motor_rated_power',col).val()) {
 						$('h2').show();
-					} 
-					$(e).html(
-					`<div>
-						<span ${key=='Motor Shaft Power' && v0>nm('motor_rated_power',col).val() ? 'class=err' : ''}>
-							${v0}
-						</span>
-						<span style='color:#5d9300'>${v1>-1 ? v1 : ''}</span>
-					</div>`
-					);
+					}
+					const spn = $('<span>').append(v0);
+					$(e).html($('<div>').append(spn).append($('<span>').css('color','#5d9300').append(v1>-1 ? v1 : '')));
+
+					hl(spn,key=='Motor Shaft Power' && v0>nm('motor_rated_power',col).val());
+					
+				// 	$(e).html(
+				// 	`<div>
+				// 		<span ${key=='Motor Shaft Power' && v0>nm('motor_rated_power',col).val() ? 'class=err' : ''}>
+				// 			${v0}
+				// 		</span>
+				// 		<span style='color:#5d9300'>${v1>-1 ? v1 : ''}</span>
+				// 	</div>`
+				// 	);
 				});
 			}          
 			vdTol('motor_rated_flc',col,flc(a),.5);
