--- a/grid.html
+++ b/grid.html
@@ -195,13 +195,13 @@
 	</tr>
 	<tr>
 		<td>
-			<div title='Enter either power or current, for the desired estimation method'>Motor Power<em>(kW)</em></div>
+			<div><span>Motor Power <i class="fa fa-question-circle" title='Enter either power or current, for the desired estimation method'/></span><em>(kW)</em></div>
 		</td>
 		<td><input name='motor_field_power' data-vd-gt onchange="clrFld('motor_field_current',this)"></td>
 	</tr>
 	<tr>
 		<td>
-			<div title='Enter either power or current, for the desired estimation method'>Motor Current<em>(A)</em></div>
+			<div>Motor Current<em>(A)</em></div>
 		</td>
 		<td><input name='motor_field_current' data-vd-gt onchange="clrFld('motor_field_power',this)"></td>
 	</tr>
