--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Pumping System Assessment Tool</title>
+	<title>Pumping System Assessment Tool (1.0.0)</title>
 	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 		<style>
 			em, dialog label {
