--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Pumping System Assessment Tool (1.0.0)</title>
+	<title>Pumping System Assessment Tool</title>
 	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
 		<style>
 			em, dialog label {
@@ -464,7 +464,7 @@
 			}
 			LS = localStorage;
 			$ = require('jquery');
-
+			$('title').append(` v${process.env.npm_package_version}`);
 			if (!loadData()) {
 				loadData(true);
 			}
