--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 				loadData(true);
 			}
 
-			function dlgFil(ext='json') {
+			function dlgFil(ext='psat') {
 				return {filters: [{ name: 'PSAT', extensions: [ext] }]};
 			}			
 
