--- a/pump_eff.html
+++ b/pump_eff.html
@@ -7,7 +7,7 @@
 }
 </style>
 <div>
-	<h1>Pump Efficiency</h1>
+	<h1>Achievable Pump Efficiency</h1>
 	Pump Style
 	<select name='pump_style' style='vertical-align: middle'>
         <option disabled>Choose</option>
