--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 <strong>Calculators</strong>
 <ul>    
 	<!--<a onclick='lnk(event,"unit_cvt")' href=''>Unit Converter</a><br>	-->
-	<a onclick='lnk(event,"pump_eff")' href=''>Pump Efficiency</a><br>
+	<a onclick='lnk(event,"pump_eff")' href=''>Achievable Pump Efficiency</a><br>
 	<a onclick='lnk(event,"motor_perf")' href=''>Motor Performance</a><br>
 	<a onclick='lnk(event,"specific_speed")' href=''>Specific Speed</a><br>
 	<a onclick='lnk(event,"nema")' href=''>NEMA Energy Efficiency</a><br>	
