--- a/motor_perf.html
+++ b/motor_perf.html
@@ -15,7 +15,7 @@
 </style>
 <h1>Motor Performance</h1>
 <div style='display:flex; justify-content: space-between;'>
-	<div style='white-space: nowrap'>
+	<div style='white-space: nowrap; padding-right:1rem'>
 		<div>
 			Line Frequency <em>(Hz)</em>
 			<label><input name=line type=radio value=0> 50</label>
