--- a/specific_speed.html
+++ b/specific_speed.html
@@ -22,7 +22,7 @@
 <div>
 	<h1>Specific Speed</h1>
 	<div style='display:flex; justify-content: space-between;'>
-		<div>
+		<div style='padding-right: 1rem'>
 			<a style='display:block' onclick='lnk(event,"what_is_ss")' href=''>What Is Specific Speed?</a><br>
 			<span>Pump Style</span><br>
 			<select name='pump_style'>
