--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 			td {
 				white-space: nowrap;
 			}
-
+			.flxwd {
+				display:flex; 
+				justify-content: space-between;
+			}
 			#container {
 				padding:0 5%;
 			}
