--- a/specific_speed.html
+++ b/specific_speed.html
@@ -21,7 +21,7 @@
 </style>
 <div>
 	<h1>Specific Speed</h1>
-	<div style='display:flex; justify-content: space-between;'>
+	<div class=flxwd>
 		<div style='padding-right: 1rem'>
 			<a style='display:block' onclick='lnk(event,"what_is_ss")' href=''>What Is Specific Speed?</a><br>
 			<span>Pump Style</span><br>
@@ -37,11 +37,10 @@
 		</div>
 		<div id=plot>
 			<canvas width="700" height="500"></canvas>
-			<div style='display:flex; justify-content: space-between;'>
+			<div class=flxwd>
 				<div>Specific Speed: <span id=ss></span></div>
 				<div>Efficiency Correction: <span id=ec></span></div>				
 			</div>
-				
 		</div>
 	</div>
 </div>
