--- a/motor_perf.html
+++ b/motor_perf.html
@@ -14,7 +14,7 @@
 }
 </style>
 <h1>Motor Performance</h1>
-<div style='display:flex; justify-content: space-between;'>
+<div class=flxwd>
 	<div style='white-space: nowrap; padding-right:1rem'>
 		<div>
 			Line Frequency <em>(Hz)</em>
