--- a/conditions.html
+++ b/conditions.html
@@ -112,10 +112,13 @@
 							lines=[hd.join(',')];
 						}
 						if (c.grid) {
+							$.each(r, (k,v) => {
+								r[k] = JSON.stringify(v);
+							});
 							let o = $.extend({},r,c);
 							lines.push(
 								hd.map((nm,i)=> {
-									return JSON.stringify(o[nm]).replace(/,/g,'; ').replace(/\[|\]/g,'');
+									return JSON.stringify(o[nm]);
 								}).join(',')
 							);
 						}
