--- a/main.html
+++ b/main.html
@@ -47,6 +47,7 @@ The Pumping System Assessment Tool was developed by the Department of Energy's B
 	<a onclick='lnk(event,"specific_speed")' href=''>Specific Speed</a><br>
 	<a onclick='lnk(event,"nema")' href=''>NEMA Energy Efficiency</a><br>	
 	<a onclick='gotoHT()' href=''>Head Tool</a><br>
+	<a onclick='lnk(event,"curve")' href=''>System Curve</a><br>
 </ul>
 
 <strong>Information</strong>
