--- a/units.html
+++ b/units.html
@@ -106,8 +106,8 @@
 		});
 		chg(DIST,HeadTool,['Ds','Dd','Zs','Ztnk_s','Zd']);		
 		chg(PRESSURE,HeadTool,['Ps','Pg_s','Pd']);		
-		chg(FLOW, Curve, [0,2]);
-		chg(DIST, Curve, [1,3]);
+		chg(FLOW, Curve.plot, [0,2]);
+		chg(DIST, Curve.plot, [1,3]);
 		chg(POWER,MotorPerf,'motor_rated_power');
 		
 		chg(FLOW,UnitExample,0);
