--- a/grid.html
+++ b/grid.html
@@ -298,7 +298,7 @@
 	</tr>
 </table>
 <p>
-	<button onclick="results(true)">RESULTS</button>
+	<button class=prime onclick="results(true)">RESULTS</button>
 </p>
 <h2 value='OUT OF RANGE VALUES'>OUT OF RANGE VALUES</h2>
 </div>
